worry unnecessarily system key workds

--- a/JsonConvertModelClass/JsonConvertModelClass/Base.lproj/Main.storyboard
+++ b/JsonConvertModelClass/JsonConvertModelClass/Base.lproj/Main.storyboard
@@ -669,19 +669,38 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="475" height="332"/>
+                        <rect key="frame" x="0.0" y="0.0" width="596" height="482"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SPa-Gg-qr8">
-                                <rect key="frame" x="28" y="284" width="88" height="18"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Class Name" id="c20-0a-4yL">
+                                <rect key="frame" x="28" y="434" width="103" height="18"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Class Name：" id="c20-0a-4yL">
+                                    <font key="font" size="15" name=".HelveticaNeueDeskInterface-Regular"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KYm-7b-mA8">
+                                <rect key="frame" x="28" y="356" width="143" height="18"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="System keywords：" id="yj5-DW-4pP">
+                                    <font key="font" size="15" name=".HelveticaNeueDeskInterface-Regular"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="y0E-Zt-9Bb">
+                                <rect key="frame" x="28" y="278" width="42" height="18"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Json:" id="ILa-DP-ohD">
                                     <font key="font" size="15" name=".HelveticaNeueDeskInterface-Regular"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2qm-7M-WzD">
-                                <rect key="frame" x="129" y="282" width="316" height="22"/>
+                                <rect key="frame" x="30" y="404" width="536" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="0KN-GM-SPK"/>
+                                </constraints>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="mme-vx-bfM">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -689,11 +708,11 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="b90-Wu-vzd">
-                                <rect key="frame" x="28" y="27" width="419" height="45"/>
+                                <rect key="frame" x="28" y="27" width="540" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="j5c-gy-5QX"/>
                                 </constraints>
-                                <buttonCell key="cell" type="bevel" title="生成" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mjg-lK-lWc">
+                                <buttonCell key="cell" type="bevel" title=" Generating" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mjg-lK-lWc">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -702,20 +721,20 @@
                                 </connections>
                             </button>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgG-vZ-dEg">
-                                <rect key="frame" x="30" y="85" width="415" height="182"/>
+                                <rect key="frame" x="30" y="85" width="536" height="185"/>
                                 <clipView key="contentView" id="NPY-Tl-WFb">
-                                    <rect key="frame" x="1" y="1" width="413" height="180"/>
+                                    <rect key="frame" x="1" y="1" width="534" height="183"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="Sus-Qt-MIg">
-                                            <rect key="frame" x="0.0" y="0.0" width="413" height="180"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="534" height="183"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="413" height="180"/>
-                                            <size key="maxSize" width="463" height="10000000"/>
+                                            <size key="minSize" width="534" height="183"/>
+                                            <size key="maxSize" width="536" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="413" height="180"/>
-                                            <size key="maxSize" width="463" height="10000000"/>
+                                            <size key="minSize" width="534" height="183"/>
+                                            <size key="maxSize" width="536" height="10000000"/>
                                         </textView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -725,35 +744,57 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="sB9-Rf-Mrc">
-                                    <rect key="frame" x="398" y="1" width="16" height="180"/>
+                                    <rect key="frame" x="519" y="1" width="16" height="183"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FWq-2U-0lX">
+                                <rect key="frame" x="30" y="326" width="536" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="ueQ-3o-evS"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="id,class,description" drawsBackground="YES" id="NaM-k6-2MG">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <connections>
+                                    <outlet property="delegate" destination="XfG-lQ-9wD" id="afM-ka-YPC"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="b90-Wu-vzd" secondAttribute="trailing" constant="30" id="3ey-TW-y0m"/>
+                            <constraint firstItem="SPa-Gg-qr8" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="525-hj-7XA"/>
                             <constraint firstAttribute="bottom" secondItem="b90-Wu-vzd" secondAttribute="bottom" constant="30" id="87o-Fn-XPC"/>
-                            <constraint firstItem="WgG-vZ-dEg" firstAttribute="top" secondItem="2qm-7M-WzD" secondAttribute="bottom" constant="15" id="LE9-X8-7VR"/>
-                            <constraint firstItem="SPa-Gg-qr8" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="MsK-31-ERz"/>
-                            <constraint firstItem="SPa-Gg-qr8" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="30" id="QW5-kP-qZv"/>
+                            <constraint firstItem="WgG-vZ-dEg" firstAttribute="top" secondItem="y0E-Zt-9Bb" secondAttribute="bottom" constant="8" id="CKo-y6-us5"/>
+                            <constraint firstItem="KYm-7b-mA8" firstAttribute="top" secondItem="2qm-7M-WzD" secondAttribute="bottom" constant="30" id="CgM-2k-pEm"/>
+                            <constraint firstItem="y0E-Zt-9Bb" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="CwM-Zm-Ks2"/>
+                            <constraint firstAttribute="trailing" secondItem="2qm-7M-WzD" secondAttribute="trailing" constant="30" id="LF2-FC-PIH"/>
+                            <constraint firstAttribute="trailing" secondItem="FWq-2U-0lX" secondAttribute="trailing" constant="30" id="Ni0-fr-DB6"/>
+                            <constraint firstItem="KYm-7b-mA8" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="XKW-1i-0i8"/>
                             <constraint firstItem="WgG-vZ-dEg" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="a7O-MY-Nr8"/>
+                            <constraint firstItem="SPa-Gg-qr8" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="30" id="cLM-v7-EFg"/>
+                            <constraint firstItem="FWq-2U-0lX" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="cRH-hL-ztE"/>
                             <constraint firstItem="b90-Wu-vzd" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="dJQ-QG-plm"/>
-                            <constraint firstItem="2qm-7M-WzD" firstAttribute="centerY" secondItem="SPa-Gg-qr8" secondAttribute="centerY" id="hjL-EB-Acc"/>
+                            <constraint firstItem="y0E-Zt-9Bb" firstAttribute="top" secondItem="FWq-2U-0lX" secondAttribute="bottom" constant="30" id="fCg-ol-Uq0"/>
                             <constraint firstAttribute="trailing" secondItem="WgG-vZ-dEg" secondAttribute="trailing" constant="30" id="ieG-h2-yPk"/>
+                            <constraint firstItem="2qm-7M-WzD" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="lY5-I4-xWO"/>
                             <constraint firstItem="b90-Wu-vzd" firstAttribute="top" secondItem="WgG-vZ-dEg" secondAttribute="bottom" constant="15" id="nVX-GF-KXf"/>
-                            <constraint firstAttribute="trailing" secondItem="2qm-7M-WzD" secondAttribute="trailing" constant="30" id="siI-9c-46t"/>
-                            <constraint firstItem="2qm-7M-WzD" firstAttribute="leading" secondItem="SPa-Gg-qr8" secondAttribute="trailing" constant="15" id="vDE-3v-oeo"/>
+                            <constraint firstItem="2qm-7M-WzD" firstAttribute="top" secondItem="SPa-Gg-qr8" secondAttribute="bottom" constant="8" id="qFz-qK-ceB"/>
+                            <constraint firstItem="FWq-2U-0lX" firstAttribute="top" secondItem="KYm-7b-mA8" secondAttribute="bottom" constant="8" id="wUR-Pa-qpu"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="classNameTextField" destination="2qm-7M-WzD" id="aH1-Ip-hBH"/>
                         <outlet property="generateButton" destination="b90-Wu-vzd" id="11G-nO-XDa"/>
-                        <outlet property="textField" destination="2qm-7M-WzD" id="vyz-Ge-Ebh"/>
+                        <outlet property="systemKeywordsTextField" destination="FWq-2U-0lX" id="oFq-Ib-sOx"/>
                         <outlet property="textView" destination="Sus-Qt-MIg" id="UdO-s1-iCF"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="72.5" y="686"/>
+            <point key="canvasLocation" x="133" y="761"/>
         </scene>
     </scenes>
 </document>
